tests/cel/chainsaw/inject-proxy-env/pod-excluded-by-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capi-excluded
  namespace: default
spec:
  containers:
  - name: test-container
    image: busybox:latest
