tests/cel/chainsaw/inject-proxy-env/pod-proxy-inject.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-proxy-inject
  namespace: default
spec:
  containers:
  - name: test-container
    image: busybox:latest
