tests/cel/chainsaw/inject-proxy-env/pod-excluded-by-annotation-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-annotation-excluded
  namespace: default
  annotations:
    policies.kyverno.io/inject-proxy-env: exclude
spec:
  containers:
  - name: test-container
    image: busybox:latest
    (length(env || `[]`)): 0
