tests/cel/chainsaw/inject-proxy-env/pod-proxy-inject-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-proxy-inject
  namespace: default
spec:
  containers:
  - name: test-container
    env:
    - name: HTTP_PROXY
      value: http://proxy.example.com:8080
    - name: http_proxy
      value: http://proxy.example.com:8080
    - name: HTTPS_PROXY
      value: https://proxy.example.com:8080
    - name: https_proxy
      value: https://proxy.example.com:8080
